[gd_scene load_steps=4 format=3 uid="uid://cjwwk5kwb1l8g"]

[ext_resource type="Script" uid="uid://c48hf187xmpvn" path="res://sushi.gd" id="1_jjtg1"]
[ext_resource type="Texture2D" uid="uid://cpby2rbq5oxtd" path="res://icon.svg" id="1_r38da"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjtg1"]
size = Vector2(124.5, 125)

[node name="Sushi" type="PathFollow2D"]
rotates = false
loop = false
script = ExtResource("1_jjtg1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_r38da")

[node name="sushi" type="Area2D" parent="."]

[node name="collider shape" type="CollisionShape2D" parent="sushi"]
position = Vector2(0.25, 0.5)
shape = SubResource("RectangleShape2D_jjtg1")

[connection signal="sushi_eaten" from="." to="." method="_on_sushi_eaten"]
[connection signal="sushi_trashed" from="." to="." method="_on_sushi_trashed"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
